@@ -17,7 +17,7 @@ public final class EntityCullingManagerImpl implements EntityCullingManager {
     @Override
     public void load() {
         if (Config.enableEntityCulling()) {
-            int threads = Math.min(64, Math.max(Config.entityCullingThreads(), 1));
+            int threads = Math.clamp(Config.entityCullingThreads(), 1, 64);
             for (int i = 0; i < threads; i++) {
                 EntityCullingThread thread = new EntityCullingThread(i, threads);
                 this.threads.add(thread);
